# PredictiveSTS

./: .gitignore  CMakeLists.txt  README.md
Geometry/: hat_ribs_scap_new.vtp  stool_small.stl
MotionSynthesis/: .gitignore  CMakeLists.txt  README.md
MotionSynthesis/inc/: activationPointActuator.h  assistanceForceVisualization.h  customStrategy.h  modelFuns.h  nonStandardOutputs.h  parameterization.h  seatConstraintHandler.h  termination.h  universalConsts.h
MotionSynthesis/src/: MtxNew.cpp  main.cpp  modelFunsCommon.cpp  modelFunsSitting.cpp  modelFunsStanding.cpp  nonStandardOutput.cpp  parameterization.cpp  replay.cpp  seatConstraintHandler.cpp  termination.cpp
docs/IK/: IKSetup.xml  MarkerRegistration.xml  markersFinal.xml  subjectB.osim  subjectBMarkers.xml
docs/IK/trials/: Steps.txt
docs/Plots/: 80pctAssisted.py  Actuation.py  EMG.py  ExponentialWeight.py  GroundForces.py  JointAnglesAssistForce.py  JointKinematics.py  comPlot.py  fileReader.py  motion.py  motionThresholds.py  sensitivity.py
docs/Plots/Data/: 00pct_ID.sto  00pct_ID_Ankle.sto  00pct_ID_Hip.sto  00pct_ID_Knee.sto  00pct_com.mot  20pct_ID.sto  20pct_ID_Ankle.sto  20pct_ID_Hip.sto  20pct_ID_Knee.sto  20pct_com.mot  40pct_ID.sto  40pct_ID_Ankle.sto  40pct_ID_Hip.sto  40pct_ID_Knee.sto  40pct_com.mot  60pctAssisted_ID.sto  60pctAssisted_ID_Ankle.sto  60pctAssisted_ID_Hip.sto  60pctAssisted_ID_Knee.sto  60pctAssisted_com.mot
docs/ProcessedData/: Comparison.xlsx  ProcessingSteps.txt
docs/ProcessedData/00pct/: 00pct.sto  00pct_ID.sto  00pct_ID_Ankle.sto  00pct_ID_Hip.sto  00pct_ID_Knee.sto  00pct_com.sto  00pct_feetForces.mot  00pct_force.mot  00pct_grf.mot  AnalysisSetup.xml  ExternalForces.xml  IDSetup.xml  MuscleAnalysisSetup.xml  vin_00pct.osim
docs/ProcessedData/20pct/: 20pct.sto  20pct_ID.sto  20pct_ID_Ankle.sto  20pct_ID_Hip.sto  20pct_ID_Knee.sto  20pct_com.sto  20pct_feetForces.mot  20pct_force.mot  20pct_grf.mot  AnalysisSetup.xml  ExternalForces.xml  IDSetup.xml  MuscleAnalysisSetup.xml  vin_20pct.osim
docs/ProcessedData/40pct/: 40pct.sto  40pct_ID.sto  40pct_ID_Ankle.sto  40pct_ID_Hip.sto  40pct_ID_Knee.sto  40pct_com.sto  40pct_feetForces.mot  40pct_force.mot  40pct_grf.mot  AnalysisSetup.xml  IDSetup.xml  MuscleAnalysisSetup.xml  vin_40pct.osim
docs/ProcessedData/60pct/: 60pct.sto  60pct_ID.sto  60pct_ID_Ankle.sto  60pct_ID_Hip.sto  60pct_ID_Knee.sto  60pct_com.mot  60pct_com.sto  60pct_feetForces.mot  60pct_force.mot  60pct_grf.mot  AnalysisSetup.xml  ExternalForces.xml  IDSetup.xml  vin_60pct.osim
docs/ProcessedData/60pct(Assisted)/: 60pctAssisted.sto  60pctAssisted_ID.sto  60pctAssisted_ID_Ankle.sto  60pctAssisted_ID_Hip.sto  60pctAssisted_ID_Knee.sto  60pctAssisted_com.mot  60pctAssisted_feetForces.mot  60pctAssisted_force.mot  60pctAssisted_grf.mot  AssistanceVisualization.mot  ExternalForces.xml  IDSetup.xml  MuscleAnalysisSetup.xml  comTransform.xml  vin_60pctAssisted.osim
docs/ProcessedData/60pct(Tracking)/: 40pct.sto  40pct_grf.mot  CMC_Actuators.xml  CMC_Setup.xml  ExternalForces.xml
docs/ProcessedData/60pct(Tracking)/ResultsCMC/: Actuation_force_Hip100.sto  Actuation_force_Knee100.sto
docs/ProcessedData/80pct/: 80pct.sto  80pct_feetForces.mot  80pct_force.mot  80pct_grf.mot
docs/ProcessedData/80pctAssisted/: 80pctAssisted.sto  80pctAssisted_ID.sto  80pctAssisted_ID_Ankle.sto  80pctAssisted_ID_Hip.sto  80pctAssisted_ID_Knee.sto  80pctAssisted_com.sto  80pctAssisted_feetForces.mot  80pctAssisted_force.mot  80pctAssisted_grf.mot  AnalysisSetup.xml  AssistanceVisualization.mot  ExternalForces.xml  IDSetup.xml  vin_80pctAssisted.osim
docs/ProcessedData/80pctTracking/: 60pct.sto  60pct_grf.mot  CMC_Actuators.xml  CMC_ControlConstraints.xml  CMC_Setup.xml  CMC_Tasks.xml  vin_80pct.osim
docs/ProcessedData/80pctTracking/ResultsCMC/Hip/: Sit-to-stand_Actuation_force.sto  Sit-to-stand_states.sto
docs/ProcessedData/80pctTracking/ResultsCMC/Knee/: Sit-to-stand_Actuation_force.sto  Sit-to-stand_states.sto
docs/ProcessedData/Sensitivity/1642315828/: comments.txt  optimTraj.sto  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1642391586/: comments.txt  optimTraj.sto  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1642478839/: optimTraj.sto  optimTraj_feetForces.mot  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1642579960/: comments.txt  optimTraj.sto  optimTraj_feetForces.mot  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1642646135/: optimTraj.sto  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1642679840/: comments.txt  optimTraj.sto  optimTraj_feetForces.mot  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1642991269/: optimTraj.sto  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1643076250/: optimTraj.sto  optimTraj_feetForces.mot  optimTraj_force.mot
docs/ProcessedData/Sensitivity/1643121248/: optimTraj.sto  optimTraj_feetForces.mot  optimTraj_force.mot
geometry/: geometryfiles.txt
inc/: MtxNew.h  WrapCylinderNew.h  WrapMathNew.h  modelFuns.h  parameterization.h  seatConstraintHandler.h  termination.h  universalConsts.h  utility.h
src/: RegisterTypes_osimPlugin.cpp  WrapCylinderNew.cpp  WrapMathNew.cpp  main.cpp  modelFunsCommon.cpp  modelFunsSitting.cpp  modelFunsStanding.cpp  parameterization.cpp  replay.cpp  seatConstraintHandler.cpp  termination.cpp  utility.cpp
